yaml/sandbox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-klahtiapwdxa
  labels:
    cloud.sealos.io/app-deploy-manager: FullstackSandbox
    cloud.sealos.io/app-deploy-manager-domain: aeqnmvugspcz
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/client-body-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/server-snippet: |
      client_header_buffer_size 64k;
      large_client_header_buffers 4 128k;
spec:
  rules:
    - host: aeqnmvugspcz.usw.sealos.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: FullstackSandbox-kcbnvqgwwqhb
                port:
                  number: 3000
  tls:
    - hosts:
        - aeqnmvugspcz.usw.sealos.io
      secretName: wildcard-cert

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-qdelovavnead
  labels:
    cloud.sealos.io/app-deploy-manager: FullstackSandbox
    cloud.sealos.io/app-deploy-manager-domain: pmvcptgdiaat
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/client-body-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/server-snippet: |
      client_header_buffer_size 64k;
      large_client_header_buffers 4 128k;
spec:
  rules:
    - host: pmvcptgdiaat.usw.sealos.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: FullstackSandbox-kcbnvqgwwqhb
                port:
                  number: 5000
  tls:
    - hosts:
        - pmvcptgdiaat.usw.sealos.io
      secretName: wildcard-cert

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-dvvlehxmlcte
  labels:
    cloud.sealos.io/app-deploy-manager: FullstackSandbox
    cloud.sealos.io/app-deploy-manager-domain: qaliclnpvjcd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/client-body-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/server-snippet: |
      client_header_buffer_size 64k;
      large_client_header_buffers 4 128k;
spec:
  rules:
    - host: qaliclnpvjcd.usw.sealos.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: FullstackSandbox-kcbnvqgwwqhb
                port:
                  number: 8080
  tls:
    - hosts:
        - qaliclnpvjcd.usw.sealos.io
      secretName: wildcard-cert
