yaml/sandbox/terminal_ws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-ghypnddrnytm
  labels:
    cloud.sealos.io/app-deploy-manager: ttyd
    cloud.sealos.io/app-deploy-manager-domain: hmpwkcrkvpga
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/client-body-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/server-snippet: |
      client_header_buffer_size 64k;
      large_client_header_buffers 4 128k;
spec:
  rules:
    - host: hmpwkcrkvpga.usw.sealos.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ttyd-ufhdxlkadbic
                port:
                  number: 7681
  tls:
    - hosts:
        - hmpwkcrkvpga.usw.sealos.io
      secretName: wildcard-cert
